<resources>
    <string name="app_name">BitmapAndAnimation</string>
    <string name="load_bitmap">load sample bitmap</string>
    <string name="handle_concurency">Handle concurency</string>
    <string name="cache_bitmap">Cache Bitmap</string>
    <string name="cfg_change">Configuration Change</string>
    <string name="manage_memory">Manage memory</string>
    <string name="option_inbitmap">Option inBitmap</string>
    <string name="view_pager_ui">View Pager</string>
    <string name="view_grid">View Grid</string>
</resources>
