<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="google.trainging.com.bitmapandanimation.MainActivity">

    <Button
        android:id="@+id/load_sample_bitmap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/load_bitmap"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/handle_concurency"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/handle_concurency"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/load_sample_bitmap" />

    <Button
        android:id="@+id/bitmap_cache"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cache_bitmap"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/handle_concurency" />

    <Button
        android:id="@+id/cfg_change"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cfg_change"
        app:layout_constraintTop_toBottomOf="@+id/bitmap_cache"
        tools:layout_editor_absoluteX="8dp" />

    <Button
        android:id="@+id/manage_memory"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/manage_memory"
        app:layout_constraintTop_toBottomOf="@+id/cfg_change"
        tools:layout_editor_absoluteX="8dp" />

    <Button
        android:id="@+id/inBitmap_option"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/option_inbitmap"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manage_memory" />

    <Button
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/view_pager_ui"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inBitmap_option" />

    <Button
        android:id="@+id/grid_view"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/view_grid"
        app:layout_constraintTop_toBottomOf="@+id/view_pager"
        tools:layout_editor_absoluteX="8dp" />
</android.support.constraint.ConstraintLayout>
